{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 10,
  "lineage": "8adeb625-3217-2b86-145d-82b293d1a5a1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "slave-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037f7e3440aba55c3",
            "association_id": "eipassoc-027e5084674c4c966",
            "domain": "vpc",
            "id": "eipalloc-037f7e3440aba55c3",
            "instance": "i-0ca997fcafdc6b824",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-00630b20eec8d0d12",
            "private_dns": "ip-10-0-35-88.eu-central-1.compute.internal",
            "private_ip": "10.0.35.88",
            "public_dns": "ec2-3-64-91-117.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.64.91.117",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.slave",
            "aws_security_group.slave-ingress",
            "aws_subnet.slave-subnet",
            "aws_vpc.slave-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a49b025fffbbdac6",
            "arn": "arn:aws:ec2:eu-central-1:008014108475:instance/i-0ca997fcafdc6b824",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca997fcafdc6b824",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slave",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00630b20eec8d0d12",
            "private_dns": "ip-10-0-35-88.eu-central-1.compute.internal",
            "private_ip": "10.0.35.88",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0224540760474ad03",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06b60c76c578f4af3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f6dd7c6234aa4ba",
            "tags": {
              "Name": "slave"
            },
            "tags_all": {
              "Name": "slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b60c76c578f4af3"
            ]
          },
          "dependencies": [
            "aws_security_group.slave-ingress",
            "aws_subnet.slave-subnet",
            "aws_vpc.slave-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "slave-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:008014108475:internet-gateway/igw-0df9ac04eb5cec8db",
            "id": "igw-0df9ac04eb5cec8db",
            "owner_id": "008014108475",
            "tags": {
              "Name": "slave-gw"
            },
            "tags_all": {
              "Name": "slave-gw"
            },
            "vpc_id": "vpc-0ba4b13cfe9fd3761"
          },
          "dependencies": [
            "aws_vpc.slave-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "slave-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:008014108475:route-table/rtb-0a6912d5c41b4b6c4",
            "id": "rtb-0a6912d5c41b4b6c4",
            "owner_id": "008014108475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df9ac04eb5cec8db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "slave-route-table"
            },
            "tags_all": {
              "Name": "slave-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba4b13cfe9fd3761"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.slave-gw",
            "aws_vpc.slave-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e392b64a6a2d699f",
            "route_table_id": "rtb-0a6912d5c41b4b6c4",
            "subnet_id": "subnet-09f6dd7c6234aa4ba"
          },
          "dependencies": [
            "aws_internet_gateway.slave-gw",
            "aws_route_table.slave-route-table",
            "aws_subnet.slave-subnet",
            "aws_vpc.slave-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "slave-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:008014108475:security-group/sg-06b60c76c578f4af3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b60c76c578f4af3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "slave-ingress",
            "name_prefix": "",
            "owner_id": "008014108475",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba4b13cfe9fd3761"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.slave-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "slave-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:008014108475:subnet/subnet-09f6dd7c6234aa4ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f6dd7c6234aa4ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008014108475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ba4b13cfe9fd3761"
          },
          "dependencies": [
            "aws_vpc.slave-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "slave-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:008014108475:vpc/vpc-0ba4b13cfe9fd3761",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-045608509e04851be",
            "default_route_table_id": "rtb-0d396aa3486694316",
            "default_security_group_id": "sg-05aedab6a62bd994b",
            "dhcp_options_id": "dopt-96f29cfc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ba4b13cfe9fd3761",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d396aa3486694316",
            "owner_id": "008014108475",
            "tags": {
              "Name": "slave-vpc"
            },
            "tags_all": {
              "Name": "slave-vpc"
            }
          }
        }
      ]
    }
  ]
}